// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthGenesisVault can deposit through receive fallback function 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 74746,
}
`;

exports[`EthGenesisVault migrate migrates from rewardEthToken 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 74438,
}
`;

exports[`EthGenesisVault pulls assets on claim exited assets 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 64299,
}
`;

exports[`EthGenesisVault pulls assets on multiple validators registration 1`] = `
Object {
  "calldataByteLength": 3716,
  "gasUsed": 682446,
}
`;

exports[`EthGenesisVault pulls assets on single validator registration 1`] = `
Object {
  "calldataByteLength": 1444,
  "gasUsed": 337979,
}
`;

exports[`EthGenesisVault update state deducts rewards on first state update 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 145186,
}
`;

exports[`EthGenesisVault update state splits penalty between rewardEthToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 100591,
}
`;

exports[`EthGenesisVault update state splits reward between rewardEthToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 162286,
}
`;
